Fix IE7 mis-aligned borders on high scores list. Ref #158.

--- a/app/assets/stylesheets/_high-scores.sass
+++ b/app/assets/stylesheets/_high-scores.sass
@@ -65,10 +65,6 @@ $score-metric-width: 110px
         margin-bottom: 8px
         overflow: hidden
 
-      .score, .user, .metric, .actions
-        border-top: 1px solid #ddd
-        border-bottom: 1px solid #ddd
-
       .position, .score, .user, .metric, .actions
         display: block
         float: left
@@ -83,13 +79,19 @@ $score-metric-width: 110px
         background: image-url("grey_star.png") center center no-repeat
         text-align: center
 
+      .details
+        border: 1px solid #ddd
+        border-radius: 4px
+        float: left
+        overflow: hidden
+        width: 860px
+
       li:first-child
         .position
           background: image-url("star.png") center center no-repeat
 
       .score
         background: #ddd
-        border-left: 1px solid #ccc
         border-top-left-radius: 4px
         border-bottom-left-radius: 4px
         padding-top: 16px
@@ -129,8 +131,8 @@ $score-metric-width: 110px
         width: $score-metric-width
 
       .metric
-        padding-top: 13px
-        padding-bottom: 11px
+        padding-top: 14px
+        padding-bottom: 10px
 
         .graph
           background: image-url("scenes/modern/bars.png") repeat-x
@@ -161,9 +163,6 @@ $score-metric-width: 110px
           color: #777
 
       .actions
-        border-right: 1px solid #ddd
-        border-top-right-radius: 4px
-        border-bottom-right-radius: 4px
         font-size: 12px
         font-weight: bold
         padding-top: 0
@@ -172,7 +171,7 @@ $score-metric-width: 110px
 
         a
           display: block
-          padding: 21px 0 22px
+          padding: 23px 0 20px
 
 // High Scores Overlay Popup Thing (TM) --------------------------------------
 
